crates/lutum/tests/ui/hook_def_output_without_companion.stderr
error: #[hook(...)] 'output' requires 'aggregate' or 'finalize'
 --> tests/ui/hook_def_output_without_companion.rs:3:20
  |
3 |     #[hook(always, output = usize)]
  |                    ^^^^^^
